# openai-python

./: main.ipynb  pyproject.toml
project/color-palette/: color-palette.ipynb  main.py
project/color-palette/static/: styles.css
project/color-palette/templates/: index.html
